[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zoner"
version = "0.1.0"
description = "A premium, highly interactive utility to select and edit polygonal Regions of Interest (ROIs)."
readme = "README.md"
authors = [
    { name = "Jomar Lazaro", email = "DevJom@users.noreply.github.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
]

[tool.setuptools.packages.find]
where = ["src"]
