[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyzoner"
version = "0.1.0"
description = "A premium, highly interactive utility to select and edit polygonal Regions of Interest (ROIs)."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Jomar Lazaro", email = "jomarmlazaro@gmail.com" }
]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
]

[project.urls]
Homepage = "https://github.com/DevJom/zoner"
Repository = "https://github.com/DevJom/zoner"

[tool.setuptools.packages.find]
where = ["src"]
