[metadata]
name = zoner
version = 0.1.0
description = A premium, highly interactive utility to select and edit polygonal Regions of Interest (ROIs).
long_description = file: README.md
long_description_content_type = text/markdown
author = Jomar Lazaro
author_email = DevJom@users.noreply.github.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    opencv-python

[options.packages.find]
where = src
